# autocrawl

./: .env.example  .gitignore  0  README.md  REPORT_BOTTLENECK.md  TUTORIAL.md  docker-compose.gpu.yml  docker-compose.yml  reason
.claude/: settings.local.json
.impeccable/: design.json
.impeccable/live/: config.json
backend/: Dockerfile  Dockerfile.agentic  pyproject.toml
backend/ops/: ollama_init.sh
backend/src/agentic_crawler/: agent.py  agent_trace_publisher.py  cli.py  config.py  enrich_agent.py  enrich_queue.py  enrich_worker.py  knowledge.py  lessons.py  preflight.py  product_enricher.py  reporter.py  runner.py  scheduler.py  static_scraper.py  tools.py  translator.py
backend/src/crawler/: cli.py  config.py  graph.py  schemas.py
backend/src/crawler/agents/: discovery.py  enricher.py  fusion.py  name_resolver.py  pdf_finder.py  product_scope_scorer.py  reporter.py  resolver.py  scope_classifier.py  validator.py  vendor_outreach.py
backend/src/crawler/api/: app.py
backend/src/crawler/api/routes/: config_scope.py  expos.py  health.py  labs.py  orchestrator.py  overview.py  runs.py  system.py  vendors.py
backend/src/crawler/db/: engine.py  models.py
backend/src/crawler/db/repositories/: __init__.py  expo_repo.py  fusion_repo.py  run_repo.py  vendor_repo.py
backend/src/crawler/observability/: metrics.py  tracer.py
backend/src/crawler/store/: db_reporter.py  json_reporter.py  redis_queue.py  vector_store.py
backend/src/crawler/tools/browsers/: fetcher.py  httpx_client.py  jina_reader.py
backend/src/crawler/tools/crawl4ai_client/: client.py
backend/src/crawler/tools/enrichment/: vendor_site_crawl.py
backend/src/crawler/tools/llm/: openai_client.py
backend/src/crawler/tools/parsers/: pdf_parser.py
backend/src/crawler/tools/scrapers/: pdf_extractor.py  wikipedia.py
backend/src/crawler/tools/search/: arxiv.py  bing.py  brave.py  ddg.py  github_search.py  google_news_rss.py  hackernews.py  internet_archive.py  multi.py  openalex.py  openserp.py  reddit.py  region.py  searxng.py  semantic_scholar.py  tavily.py  wayback_cdx.py  wikipedia.py
backend/tests/unit/: test_schemas.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ActivityFeed.vue  CompletenessBar.vue  ConfirmCountdownModal.vue  DataTable.vue  EmptyState.vue  HudCompletenessBar.vue  HudCountryDetailPanel.vue  HudFlowNode.vue  HudFlowSubNode.vue  HudIndustryBadge.vue  HudKpiTile.vue  (+16 more)
frontend/tests/: CompletenessBar.spec.ts  DataTable.spec.ts  IndustryBadge.spec.ts  ProvenanceTimeline.spec.ts  StatCard.spec.ts
report/: 11052026.md  12052026.md  AGENT-18052026.md
test_agent/: app.py
test_agent/templates/: index.html
(+41 files in other folders)
